fix: title spilling

--- a/aetesis/public/css/aetesis.css
+++ b/aetesis/public/css/aetesis.css
@@ -344,7 +344,6 @@ a {
   font-size: 3.5rem !important;
   margin-bottom: 0;
   padding-top: 1rem;
-  white-space: nowrap;
 }
 
 #contact-title {
